# seam_carver

./: .gitignore  CMakeLists.txt  Makefile  README.md  cmake_uninstall.cmake.in  configure
.github/workflows/: cmake.yml
include/: Filter.h  Image.h  Pixel.h  StronkImage.h
libs/: filter.cpp  image.cpp  imgfileops.cpp
src/: filter.cpp  image.cpp  main.cpp
tests/: FilterTest.cpp  ImageDataTest.cpp
